# pdf2word

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: app.py
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: FileUpload.vue  ProgressBar.vue  StatusBox.vue
frontend/src/composables/: useConverter.ts
frontend/src/styles/: animations.css  variables.css
frontend/src/types/: api.ts
openspec/changes/archive/2026-03-15-glassmorphism-frontend-redesign/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-glassmorphism-frontend-redesign/specs/file-upload/: spec.md
openspec/changes/archive/2026-03-15-glassmorphism-frontend-redesign/specs/progress-display/: spec.md
openspec/changes/archive/2026-03-15-glassmorphism-frontend-redesign/specs/vue3-app/: spec.md
openspec/changes/archive/2026-03-15-migrate-to-vue3-ts-vite/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-migrate-to-vue3-ts-vite/specs/download-handler/: spec.md
openspec/changes/archive/2026-03-15-migrate-to-vue3-ts-vite/specs/file-upload/: spec.md
openspec/changes/archive/2026-03-15-migrate-to-vue3-ts-vite/specs/progress-display/: spec.md
openspec/changes/archive/2026-03-15-migrate-to-vue3-ts-vite/specs/vue3-app/: spec.md
openspec/specs/visual-design-system/: spec.md
