[project]
name = "pdf2word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fire==0.7.1",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "fonttools==4.61.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==6.0.2",
    "markupsafe==3.0.3",
    "numpy==2.2.6",
    "opencv-python-headless==4.13.0.92",
    "packaging==24.2",
    "pdf2docx==0.5.9",
    "pymupdf==1.27.1",
    "python-docx==1.2.0",
    "setuptools==80.10.2",
    "termcolor==3.3.0",
    "typing-extensions==4.15.0",
    "uv==0.10.5",
    "werkzeug==3.1.6",
    "wheel==0.46.3",
]
